Work on econ tables; added votes

--- a/__site/concord/index.html
+++ b/__site/concord/index.html
@@ -359,25 +359,198 @@
 
 <p>In terms of educational attainment, 62.09% of the population has a college degree, of which 18.96% are graduate-level degrees.</p>	 
 
-<div class="marginnote">Source: <a href="https://www.maine.gov/decd/sites/maine.gov.decd/files/inline-files/Final&#37;20Report&#37;20-&#37;202024&#37;20Annual&#37;20Macro&#37;20Update&#37;20-&#37;20Maine&#37;20DECD.pdf">Maine State of Domestic Trade Annual Report 2024</a></div>
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<p>─────┼────────────────────────
-1 │ concord     1.45634e12</p>
-<p>G20</p>
-<p>gdp between Netherlands and Indonesia<br /></p>
+<h3 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h3>
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/ct">Connecticut</a>, <a href="https://ustr.gov/map/state-benefits/me">Maine</a>, <a href="https://ustr.gov/map/state-benefits/ma">Massachusetts</a>, <a href="https://ustr.gov/map/state-benefits/nh">New Hampsire</a>, <a href="https://ustr.gov/map/state-benefits/ri">Rhode Island</a>, <a href="https://ustr.gov/map/state-benefits/vt">Vermont</a></div>
+<p>Concordia has a gross domestic product that ranks fourth, behind New York, ahead of Florida, in the United States. It accounts for about 6.4&#37; of the national gross domestic product. </p>
+<p>The following table shows how Concordia&#39;s gross domestic product compares to the 27 nations of the European Union.</p>
+<div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
+
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "text-align: left;">Nation</th>
+      <th style = "text-align: right;">GDP (trillions)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Malta</td>
+      <td style = "text-align: right;">0.0223</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Cyprus</td>
+      <td style = "text-align: right;">0.0339</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Estonia</td>
+      <td style = "text-align: right;">0.0413</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Latvia</td>
+      <td style = "text-align: right;">0.0422</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Slovenia</td>
+      <td style = "text-align: right;">0.0691</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Lithuania</td>
+      <td style = "text-align: right;">0.0798</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Croatia</td>
+      <td style = "text-align: right;">0.0844</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Luxembourg</td>
+      <td style = "text-align: right;">0.0858</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Bulgaria</td>
+      <td style = "text-align: right;">0.1024</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Slovak Republic</td>
+      <td style = "text-align: right;">0.1329</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Hungary</td>
+      <td style = "text-align: right;">0.2124</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Greece</td>
+      <td style = "text-align: right;">0.2435</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Portugal</td>
+      <td style = "text-align: right;">0.2891</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Finland</td>
+      <td style = "text-align: right;">0.2955</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Czech Republic</td>
+      <td style = "text-align: right;">0.3432</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Romania</td>
+      <td style = "text-align: right;">0.3508</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Denmark</td>
+      <td style = "text-align: right;">0.4071</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Austria</td>
+      <td style = "text-align: right;">0.5117</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Ireland</td>
+      <td style = "text-align: right;">0.5514</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Sweden</td>
+      <td style = "text-align: right;">0.585</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Belgium</td>
+      <td style = "text-align: right;">0.6448</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Poland</td>
+      <td style = "text-align: right;">0.8092</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Netherlands</td>
+      <td style = "text-align: right;">1.1544</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "font-weight: bold; text-align: left;">Concordia</td>
+      <td style = "font-weight: bold; text-align: right;">1.4563</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Spain</td>
+      <td style = "text-align: right;">1.6201</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Italy</td>
+      <td style = "text-align: right;">2.3009</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">France</td>
+      <td style = "text-align: right;">3.0518</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Germany</td>
+      <td style = "text-align: right;">4.5257</td>
+    </tr>
+  </tbody>
+</table>
+	 
+
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
-<h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
+<p>Concordia’s industries include high-value specialty chemicals specialty polymers, pharmaceutical intermediates, and advanced materials used in electronics, healthcare, and other high-tech sectors. Its aerospace industry includes propulsion, avionics, and systems engineering for unmanned systems, advanced sensor technologies, satellite components, and precision-engineered aerospace parts. General Dynamics Electric Boat division designs, manufactures, maintains and retrofits submarines for the U.S. Navy.</p>
+<p>The six Concordia states collectively exported &#36;67.5 billion in goods to the world in 2024, with Massachusetts leading at &#36;34.9 billion, followed by Connecticut at &#36;17.4 billion, New Hampshire at &#36;7.1 billion and Rhode Island at &#36;3.1 billion. Maine at &#36;3.1 billion and Vermont at &#36;1.9 billion. The region’s economic strength in trade goods lies in sectors such as chemical manufacturing, aerospace, computer and electronic products and precision machinery. However, most states face trade deﬁcits due to reliance on imports for raw materials and consumer goods. Services exports, particularly in education, digital trade, and management consulting, play a signiﬁcant role in offsetting goods deficits, with Massachusetts and Connecticut each exporting &#36;15 billion in 2023. </p>
+<h3 id="foods"><a href="#foods" class="header-anchor">Foods</a></h3>
+<p>Concordia&#39;s agriculture is a diversified mix of livestock, dairy, fruits, vegetables, and specialty crops. The principal monoculture farming is the potato fields of Arostook County in Maine. Fishing and aquaculture activity includes lobster, cod, haddock and clams.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
+<p>Maine has a timber and paper industry and Vermont, New Hampshire and Massachusetts quarry dimension stone.</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
-<h3 id="balance_of_trade"><a href="#balance_of_trade" class="header-anchor">Balance of Trade</a></h3>
+<p>Financial services, education, healthcare, intellectual property licensing, information technology, and professional consulting, together with tourism, are the leading components of exports in services.</p>
+<h3 id="balance_of_trade"><a href="#balance_of_trade" class="header-anchor">Balance of trade</a></h3>
+<p>Massachusetts and Connecticut, despite high export values, have international trade deficits of &#36;16.3 billion and &#36;5.6 billion respectively in goods. New Hampshire maintains a smaller deficit of &#36;1.9 billion, while Rhode Island experiences a substantial &#36;12.4 billion shortfall. Maine’s international trade deficit reaches &#36;15.0 billion, primarily due to petroleum imports. Vermont, with limited data available, shows an estimated &#36;500 million deficit.</p>
+
+<table class="tufte-table">
+<thead>
+<tr>
+<th>State</th>
+<th>International Exports (2023)</th>
+<th>International Imports (2023)</th>
+<th>Trade Balance (International)</th>
+<th>Domestic Exports (2022–2023)</th>
+<th>Domestic Trade Balance</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tufte-table tr odd-row">
+<td style = "text-align: left;">Connecticut</td>
+<td>$15.8B (goods) + $15B (services)</td>
+<td>$21.4B (goods)</td>
+<td>-$5.6B (goods)</td>
+<td>$25.2B (estimated)</td>
+<td>+$3.8B</td>
+</tr>
+<tr>
+<td style = "text-align: left;">Maine</td>
+<td>$3.4B (goods)</td>
+<td>$18.4B (goods)</td>
+<td>-$15.0B</td>
+<td>$97.7B</td>
+<td>+$79.3B</td>
+</tr>
+<tr class="tufte-table tr odd-row">
+<td style = "text-align: left;">Massachusetts</td>
+<td>$35.2B (goods) + $15B (services)</td>
+<td>$51.2B (goods)</td>
+<td>-$16.3B (goods)</td>
+<td>$48.1B (estimated)</td>
+<td>+$12.9B</td>
+</tr>
+<tr>
+<td style = "text-align: left;">New Hampshire</td>
+<td>$7.6B (goods)</td>
+<td>$9.5B (estimated)</td>
+<td>-$1.9B</td>
+<td>$4.8B (estimated)</td>
+<td>+$2.9B</td>
+</tr>
+<tr class="tufte-table tr odd-row">
+<td style = "text-align: left;">Rhode Island</td>
+<td>$3.0B (goods) + $2.2B (services)</td>
+<td>$18.4B (goods)</td>
+<td>-$12.4B (goods)</td>
+<td>$5.1B (estimated)</td>
+<td>-$7.3B</td>
+</tr>
+<tr>
+<td style = "text-align: left;">Vermont</td>
+<td>$1.2B (estimated)</td>
+<td>$1.7B (estimated)</td>
+<td>-$0.5B</td>
+<td>$3.5B (estimated)</td>
+<td>+$1.8B</td>
+</tr>
+</tbody>
+</table>
+
+	 
+
+<div class="marginnote">Sources: <a href="https://www.bls.gov/mxp/publications/regional-publications/charts/new-england-top-6-exports.htm">Top regional exports</a> <a href="https://www.bls.gov/mxp/publications/regional-publications/new-england-exports.htm">Regional exports</a> <a href="https://www.maine.gov/decd/sites/maine.gov.decd/files/inline-files/Final&#37;20Report&#37;20-&#37;202024&#37;20Annual&#37;20Macro&#37;20Update&#37;20-&#37;20Maine&#37;20DECD.pdf">Maine trade balances</a> <a href="https://donahue.umass.edu/documents/Treasury_SocioEconomic_Report_Summer2023_Final.pdf">Massachusetts</a></div>
+<p>Domestically, Maine has a &#36;79.3 billion trade surplus with other U.S. states, driven by forest products and seafood exports. Massachusetts and Connecticut leverage their tech and aerospace sectors for positive domestic balances of &#36;12.9 billion and &#36;3.8 billion respectively. New Hampshire and Vermont also maintain modest domestic surpluses, while Rhode Island is the only state with a negative balance in both international and domestic trade.</p>
+<h2 id="political_polarization"><a href="#political_polarization" class="header-anchor">Political polarization</a></h2>
+<div class="Source:"><a href="https://tonmcg.github.io/US_County_Level_Election_Results_08-24/">United States General Election Presidential Results by District, Ward, or County from 2008 to 2024</a></div>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
-<p></p>
+<p>Assuming that US markets remain open to Concordia, it would be a viable standalone nation if it continues to absorb foreign immigration and can meet challenges in housing costs.</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 07, 2025.
+     Richard Careaga. Last modified: March 09, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
