--- a/__site/cumber/index.html
+++ b/__site/cumber/index.html
@@ -180,10 +180,10 @@
 	 
 
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
-<p><img src="/img/Cumberland Age Pyramid.png" alt="Cumberland regional age pyramid" /></p>
-<p>Compared to the United States as a whole, Concordia has a younger population, although that varies by state.</p>
+<p>Compared to the United States as a whole, Cumberland has an older population.</p>
+<p><img src="/img/Cumberland_Age_Pyramid.png" alt="Cumberland regional age pyramid" /></p>
 <p><img src="/img/Cumberland_states_age_pyramids.png" alt="Cumberland state age pyramids" /></p>
-<p>The age distribution differences are reflected in the dependency ratios for the  Concordia states.</p>
+<p>The age distribution differences are reflected in the dependency ratios for the Cumberland states.</p>
 
 <table class="tufte-table">
   <thead>
@@ -297,8 +297,110 @@
 <p>In terms of educational attainment, 39.46% of the population has a college degree, of which 11.04% are graduate-level degrees.</p>	 
 
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
-<p>2 │ cumber      7.27639e11</p>
-<p>between Argentina and Poland G20</p>
+<h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
+<div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
+<p>Cumberland has a gross domestic product that ranks seventh, behind Pennsylvania, in the United States. It accounts for about 3.2&#37; of the national gross domestic product. </p>
+
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "text-align: left;">Nation</th>
+      <th style = "text-align: right;">GDP (trillions)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Malta</td>
+      <td style = "text-align: right;">0.0223</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Cyprus</td>
+      <td style = "text-align: right;">0.0339</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Estonia</td>
+      <td style = "text-align: right;">0.0413</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Latvia</td>
+      <td style = "text-align: right;">0.0422</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Slovenia</td>
+      <td style = "text-align: right;">0.0691</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Lithuania</td>
+      <td style = "text-align: right;">0.0798</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Croatia</td>
+      <td style = "text-align: right;">0.0844</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Luxembourg</td>
+      <td style = "text-align: right;">0.0858</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Bulgaria</td>
+      <td style = "text-align: right;">0.1024</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Slovak Republic</td>
+      <td style = "text-align: right;">0.1329</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Hungary</td>
+      <td style = "text-align: right;">0.2124</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Greece</td>
+      <td style = "text-align: right;">0.2435</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Portugal</td>
+      <td style = "text-align: right;">0.2891</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Finland</td>
+      <td style = "text-align: right;">0.2955</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Czech Republic</td>
+      <td style = "text-align: right;">0.3432</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Romania</td>
+      <td style = "text-align: right;">0.3508</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Denmark</td>
+      <td style = "text-align: right;">0.4071</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Austria</td>
+      <td style = "text-align: right;">0.5117</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Ireland</td>
+      <td style = "text-align: right;">0.5514</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Sweden</td>
+      <td style = "text-align: right;">0.585</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Belgium</td>
+      <td style = "text-align: right;">0.6448</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "font-weight: bold; text-align: left;">Cumberland</td>
+      <td style = "font-weight: bold; text-align: right;">0.7276</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Poland</td>
+      <td style = "text-align: right;">0.8092</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Netherlands</td>
+      <td style = "text-align: right;">1.1544</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Spain</td>
+      <td style = "text-align: right;">1.6201</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Italy</td>
+      <td style = "text-align: right;">2.3009</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">France</td>
+      <td style = "text-align: right;">3.0518</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Germany</td>
+      <td style = "text-align: right;">4.5257</td>
+    </tr>
+  </tbody>
+</table>
+	 
+
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/ky">Kentucky</a>, <a href="https://ustr.gov/map/state-benefits/tn">Tennessee</a>, <a href="https://ustr.gov/map/state-benefits/wv">West Virginia</a></div>
+<p>In 2024, Kentucky goods exports were &#36;47.8 billion. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, computer and electronic products, machinery and fabricated metal products.</p>
+<p>In 2024, Tennessee goods exports were &#36;38.9 billion. The state&#39;s largest manufacturing export category is computer and electronic products, followed by  transportation equipment, chemicals, miscellaneous manufactured commodities and machinery.</p>
+<p>In 2024, West Virginia exported &#36;4.9 billion of goods to the world. The state&#39;s largest manufacturing export category is chemicals, followed by transportation equipment, machinery, primary metal manufacturing and petroleum and coal products.</p>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
 <h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
@@ -310,7 +412,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 07, 2025.
+     Richard Careaga. Last modified: March 09, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
