Further work on GDP

--- a/__site/desert/index.html
+++ b/__site/desert/index.html
@@ -52,7 +52,7 @@
 	scrolling="yes">
 </iframe>
 
-<p>All of Desert lies within 400 miles of Salt Lake City except for the northern portion of Montana and the eastern portion of Colorado. It is bordered by Nevada, Oregon and Washington on the west, Alberta and Saskatchewan on the north, the Dakotas, Nebraska and Kansas on the East and Oklahoma and Arizona on the south.</p>
+<p>All of Deseret lies within 400 miles of Salt Lake City except for the northern portion of Montana and the eastern portion of Colorado. It is bordered by Nevada, Oregon and Washington on the west, Alberta and Saskatchewan on the north, the Dakotas, Nebraska and Kansas on the East and Oklahoma and Arizona on the south.</p>
 <h2 id="population"><a href="#population" class="header-anchor">Population</a></h2>
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
 
@@ -190,7 +190,8 @@
 <p><img src="/img/Deseret_Age_Pyramid.png" alt="Deseret regional age pyramid" /></p>
 <p>Compared to the United States as a whole, Deserest has a younger population, although that varies by state.</p>
 <p><img src="/img/Deseret_states_age_pyramids.png" alt="Deseret state age pyramids" /></p>
-<p>The age distribution differences are reflected in the dependency ratios for the Deseret states. 
+<p>The age distribution differences are reflected in the dependency ratios for the Deseret states.</p>
+
 <table class="tufte-table">
   <thead>
     <tr class="tufte-table tr header headerLastRow">
@@ -217,7 +218,7 @@
   </tbody>
 </table>
 	
-</p>
+
 <p>A lower dependency ratio indicates a higher proportion of the population in the 16-65 age group. For the US as a whole, the ratio is 52.86.</p>
 <p><img src="/img/Deseret Age Pyramid.png" alt="Deseret regional age pyramid" /></p>
 <h2 id="birth_rates"><a href="#birth_rates" class="header-anchor">Birth Rates</a></h2>
@@ -332,9 +333,9 @@
 
 <h3 id="education"><a href="#education" class="header-anchor">Education</a></h3>
 <div class="marginnote">Source: <a href="https://www.wikiwand.com/en/articles/List_of_U.S._states_and_territories_by_educational_attainment">Wikipedia</a></div>
-
+<p>
 <p>In terms of educational attainment, 53.33% of the population has a college degree, of which 14.33% are graduate-level degrees.</p>	 
-
+	</p>
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
 <h2 id="gross_domestic_product"><a href="#gross_domestic_product" class="header-anchor">Gross Domestic Product</a></h2>
 <div class="marginnote">Source: <a href="https://data.worldbank.org/indicator/NY.GDP.MKTP.CD">World Bank</a></div>
@@ -436,18 +437,28 @@
 </table>
 	 
 
+<div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/co">Colorado</a>, <a href="https://ustr.gov/map/state-benefits/ut">Utah</a>, <a href="https://ustr.gov/map/state-benefits/mt">Montana</a>, <a href="https://ustr.gov/map/state-benefits/id">Idado</a>, <a href="https://ustr.gov/map/state-benefits/wy">Wyoming</a></div>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
-<h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
+<p>In 2024, Colorado goods exports were &#36;10.5 billion. The state&#39;s largest manufacturing export category is food &amp; kindred products, followed by computer and electronic products, machinery, chemicals and transportation equipment. </p>
+<p>In 2024, Utah goods exports were &#36;18.2 billion. The state&#39;s largest manufacturing export category is primary metal manufacturing, followed by computer and electronic products, chemicals, miscellaneous manufactured commodities and transportation equipment.</p>
+<p>In 2024, Montana goods exports were &#36;2.4 billion. The state&#39;s largest manufacturing export category is chemicals, followed by machinery, transportation equipment, primary metal manufacturing and nonmetallic mineral products.</p>
+<p>In 2024, Idaho exported &#36;4.2 billion of goods to the world. The state&#39;s largest manufacturing export category is food and kindred products, followed by computer and electronic products, chemicals, machinery and primary metal manufacturing.</p>
+<p>In 2024, Wyoming goods exports were &#36;2.1 billion. The state&#39;s largest manufacturing export category is chemicals, followed by computer and electronic products, machinery, petroleum and coal products and transportation equipment.</p>
+<h3 id="agriculture"><a href="#agriculture" class="header-anchor">Agriculture</a></h3>
+<p>Colorado&#39;s food and agriculture industry generates over &#36;5 billion in economic output annually from livestock, wheat, corn, barley, potatoes, hay, and specialty crops like cantaloupe and lettuce.The market value of agricultural products in Utah exceeds &#36;2.3 billion annually, with livestock and dairy being significant contributors. Montana&#39;s agricultural products are valued at over &#36;4.5 billion annually, with cattle and wheat being major contributors. Idaho grows potatoes, wheat, barley, hay and sugar beets. Wyoming produces livestock, hay, alfalfa, and small grains like wheat and barley.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
-<h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
-<h3 id="balance_of_trade"><a href="#balance_of_trade" class="header-anchor">Balance of Trade</a></h3>
+<p>Oil and natural gas dominate Colorado&#39;s mineral production value, accounting for ~88&#37; of its total mineral and energy production. Colorado is the 11th largest coal producer in the U.S., the second-largest producer of molybdenum in the U.S. and a key producer of gold.</p>
+<p>Utah is home to the Bingham Canyon Mine, one of the world&#39;s largest open-pit copper mines, which also produces gold and silver. Coal mining is significant for energy production in central and southern Utah. Utah produces uranium and has unconventional oil shale, and oil sands.</p>
+<p>Montana holds about 30&#37; of U.S. recoverable coal reserves and is a major coal producer from surface mines in the Powder River Basin. Crude oil production mainly occurs in the Bakken Formation in northeastern Montana; refineries process crude oil into various products like gasoline and aviation fuel. Natural gas storage capacity is substantial; Montana houses the largest single underground storage site in the U.S.</p>
+<p>The Coeur d&#39;Alene District of Idaho has produced over a billion ounces of silver since 1884. Southeastern Idaho hosts large open-pit phosphate mines used for fertilizer production.</p>
+<p>Wyoming leads the nation in coal production with large-scale surface mining operations in the Powder River Basin. It accounts for nearly two-fifths of all U.S. coal mined annually. Wyoming produces crude oil and natural gas and also has vast oil shale reserves. Wyoming contains one-third of U.S. uranium reserves. Wyoming has significant deposits critical for electric vehicle batteries and renewable energy technologies.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 10, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
