--- a/__site/notes/election_data/index.html
+++ b/__site/notes/election_data/index.html
@@ -89,6 +89,7 @@
 <li><p>These likely represent boroughs/census areas in Alaska and wards in DC that aren&#39;t defined as counties in the census.counties table</p>
 </li>
 </ul>
+<p>Mar 9, 2025 at 12:55:36 PM HI &amp; AK state election results missing from county returns: <a href="https://en.wikipedia.org/wiki/2024_United_States_presidential_election">2024 United States presidential election</a> AK GOP 184458 DEM 140026 HI GOP 193661 DEM 313044 &#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;&#43;</p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
