--- a/__site/sonora/index.html
+++ b/__site/sonora/index.html
@@ -52,7 +52,7 @@
 	scrolling="yes">
 </iframe>
 
-<p>All of New Sonora lies within 200 miles of Los Angeles except for the eastern half of Arizona. It is bordered by Oregon, Nevada, Utah and Colorado on the north, by Oklahoma and Texas on the east and by Mexico on the south.</p>
+<p>All of New Sonora lies within 200 miles of Los Angeles except for the eastern half of Arizona and all of Hawaii. It is bordered by Oregon, Nevada, Utah and Colorado on the north, by Oklahoma and Texas on the east and by Mexico on the south.</p>
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
 <h2 id="population"><a href="#population" class="header-anchor">Population</a></h2>
 
