--- a/__site/concord/index.html
+++ b/__site/concord/index.html
@@ -465,7 +465,7 @@
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
 <p>Concordia’s industries include high-value specialty chemicals specialty polymers, pharmaceutical intermediates, and advanced materials used in electronics, healthcare, and other high-tech sectors. Its aerospace industry includes propulsion, avionics, and systems engineering for unmanned systems, advanced sensor technologies, satellite components, and precision-engineered aerospace parts. General Dynamics Electric Boat division designs, manufactures, maintains and retrofits submarines for the U.S. Navy.</p>
 <p>The six Concordia states collectively exported &#36;67.5 billion in goods to the world in 2024, with Massachusetts leading at &#36;34.9 billion, followed by Connecticut at &#36;17.4 billion, New Hampshire at &#36;7.1 billion and Rhode Island at &#36;3.1 billion. Maine at &#36;3.1 billion and Vermont at &#36;1.9 billion. The region’s economic strength in trade goods lies in sectors such as chemical manufacturing, aerospace, computer and electronic products and precision machinery. However, most states face trade deﬁcits due to reliance on imports for raw materials and consumer goods. Services exports, particularly in education, digital trade, and management consulting, play a signiﬁcant role in offsetting goods deficits, with Massachusetts and Connecticut each exporting &#36;15 billion in 2023. </p>
-<h3 id="foods"><a href="#foods" class="header-anchor">Foods</a></h3>
+<h3 id="agriculture"><a href="#agriculture" class="header-anchor">Agriculture</a></h3>
 <p>Concordia&#39;s agriculture is a diversified mix of livestock, dairy, fruits, vegetables, and specialty crops. The principal monoculture farming is the potato fields of Arostook County in Maine. Fishing and aquaculture activity includes lobster, cod, haddock and clams.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
 <p>Maine has a timber and paper industry and Vermont, New Hampshire and Massachusetts quarry dimension stone.</p>
@@ -543,6 +543,7 @@
 <p>Domestically, Maine has a &#36;79.3 billion trade surplus with other U.S. states, driven by forest products and seafood exports. Massachusetts and Connecticut leverage their tech and aerospace sectors for positive domestic balances of &#36;12.9 billion and &#36;3.8 billion respectively. New Hampshire and Vermont also maintain modest domestic surpluses, while Rhode Island is the only state with a negative balance in both international and domestic trade.</p>
 <h2 id="political_polarization"><a href="#political_polarization" class="header-anchor">Political polarization</a></h2>
 <div class="Source:"><a href="https://tonmcg.github.io/US_County_Level_Election_Results_08-24/">United States General Election Presidential Results by District, Ward, or County from 2008 to 2024</a></div>
+<p>Replicating the same unstable political dichotomy of the past decade is to be avoided. Taking the 2024 presidential vote as a proxy for political values, each nation should have a clear majority.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <p>Assuming that US markets remain open to Concordia, it would be a viable standalone nation if it continues to absorb foreign immigration and can meet challenges in housing costs.</p>
 <div class="page-foot">
@@ -550,7 +551,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 10, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
