--- a/__site/cumber/index.html
+++ b/__site/cumber/index.html
@@ -398,21 +398,24 @@
 	 
 
 <div class="marginnote">Sources: <a href="https://ustr.gov/map/state-benefits/ky">Kentucky</a>, <a href="https://ustr.gov/map/state-benefits/tn">Tennessee</a>, <a href="https://ustr.gov/map/state-benefits/wv">West Virginia</a></div>
-<p>In 2024, Kentucky goods exports were &#36;47.8 billion. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, computer and electronic products, machinery and fabricated metal products.</p>
-<p>In 2024, Tennessee goods exports were &#36;38.9 billion. The state&#39;s largest manufacturing export category is computer and electronic products, followed by  transportation equipment, chemicals, miscellaneous manufactured commodities and machinery.</p>
-<p>In 2024, West Virginia exported &#36;4.9 billion of goods to the world. The state&#39;s largest manufacturing export category is chemicals, followed by transportation equipment, machinery, primary metal manufacturing and petroleum and coal products.</p>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
-<h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
+<p>In 2024, Kentucky goods exports were &#36;47.8 billion. The state&#39;s largest manufacturing export category is transportation equipment, followed by chemicals, computer and electronic products, machinery and fabricated metal products. In 2024, Tennessee goods exports were &#36;38.9 billion. The state&#39;s largest manufacturing export category is computer and electronic products, followed by  transportation equipment, chemicals, miscellaneous manufactured commodities and machinery.</p>
+<p>In 2024, West Virginia exported &#36;4.9 billion of goods to the world. The state&#39;s largest manufacturing export category is chemicals, followed by transportation equipment, machinery, primary metal manufacturing and petroleum and coal products.</p>
+<h3 id="agriculture"><a href="#agriculture" class="header-anchor">Agriculture</a></h3>
+<p>Kentucky produces soybeans, chicken, cattle, horses and corn. Tennessee production of agricultural commodities is smaller—none of its products is has as large a value as the Kentucky produce. The total value of all of West Virginia&#39;s crops is smaller than any of the leading crops of the other two states.</p>
 <h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
+<p>West Virginia and Tennessee produce bituminous coal, and all three states produce natural gas.</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
+<p>Tennessee has a significant services sector, with &#36;12 billion in total services exports in 2022 including insurance services and financial transactions, telecom, computer and information services and logistics &#40;Federal Express has a major presence in Tennessee&#41;. Information for Kentucky and West Virginia is limited. Kentucky provides race horse training and West Virginia has flight training and aircraft maintenance services.</p>
 <h3 id="balance_of_trade"><a href="#balance_of_trade" class="header-anchor">Balance of Trade</a></h3>
+<p>Insufficient information was found to estimate balance of payments.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 09, 2025.
+     Richard Careaga. Last modified: March 10, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
